--- a/missions.html
+++ b/missions.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qtpdNybEfc" once="menu" id="menu2-5j" data-rv-view="536">
+<section class="menu cid-qtpdNybEfc" once="menu" id="menu2-5j" data-rv-view="1242">
 
     
 
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/e">website building software</a></section><section class="features18 popup-btn-cards cid-qsGYKoGhLj" id="features18-1w" data-rv-view="533">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap menu</a></section><section class="features18 popup-btn-cards cid-qsGYKoGhLj" id="features18-1w" data-rv-view="1239">
 
     
 
@@ -126,7 +126,7 @@
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
                             Imagine No Malaria</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">The Imagine No Malaria program aims to reduce the number of deaths and illnesses caused by malaria in African communities through comprehensive, community-based malaria programs and quality health services delivery at United Methodist Church and affiliated health facilities.&nbsp;<br></p>
+                        <p class="mbr-text mbr-fonts-style display-7">The Imagine No Malaria program aims to reduce the number of deaths and illnesses caused by malaria in African communities through comprehensive, community-based malaria programs and quality health services delivered at United Methodist Church and affiliated health facilities.&nbsp;<br></p>
                     </div>
                 </div>
             </div>
