--- a/smallgroups.html
+++ b/smallgroups.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qtpdQZQziq" once="menu" id="menu2-5k" data-rv-view="526">
+<section class="menu cid-qtpdQZQziq" once="menu" id="menu2-5k" data-rv-view="1232">
 
     
 
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><section class="features18 popup-btn-cards cid-qsGoZBn91z" id="features18-1p" data-rv-view="523">
+<section class="engine"><a href="https://mobirise.co/a">free web builder</a></section><section class="features18 popup-btn-cards cid-qsGoZBn91z" id="features18-1p" data-rv-view="1229">
 
     
 
@@ -89,7 +89,7 @@
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
                             Bible Study</h4>
-                        <p class="mbr-text mbr-fonts-style align-left display-7">Join us Tuesdays at 10 am or 6 pm as we walk through the Bible together. &nbsp;Whether you like to discuss things or just like to sit back and listen, you’re welcome to join us. &nbsp;We typically use a guide book to help us with our study (and one can be ordered easily through the office) if you’d like … but it’s not necessary. &nbsp;Any questions? &nbsp;Feel free to contact Pastor Josh.
+                        <p class="mbr-text mbr-fonts-style align-left display-7">Join us Tuesdays at 10 am or 6 pm as we walk through the Bible together. &nbsp;Whether you like discussion or sitting back and listening, you’re welcome to join us. &nbsp;We typically use a guide book to help us with our study (and one can be ordered easily through the office if you’d like … but it’s not necessary). &nbsp;Any questions? Feel free to contact Pastor Josh.
 <br></p>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                         <div class="mbr-section-btn text-center"><a href="disciplinesstudy.html" class="btn btn-primary display-4">
                                 Learn More
                             </a></div>
-                        <img src="assets/images/mbr-1620x1080.jpg" alt="Mobirise" title="" media-simple="true">
+                        <img src="assets/images/mbr-1631x1080.jpg" alt="Mobirise" title="" media-simple="true">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
