--- a/resources.html
+++ b/resources.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qtpdb8CcOA" once="menu" id="menu2-57" data-rv-view="4697">
+<section class="menu cid-qtpdb8CcOA" once="menu" id="menu2-57" data-rv-view="4870">
 
     
 
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slideshow</a></section><section class="mbr-section article content12 cid-qt7xhhoirN" id="content12-31" data-rv-view="4696">
+<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="mbr-section article content12 cid-qt7xhhoirN" id="content12-31" data-rv-view="4869">
      
 
     <div class="container">
