--- a/history.html
+++ b/history.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/images/picture-tccc-pin-2-301x301.jpg" type="image/x-icon">
   <meta name="description" content="Website Creator Description">
-  <title>Information</title>
+  <title>History</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-<section class="menu cid-qutCRysI8B" once="menu" id="menu2-d" data-rv-view="5099">
+<section class="menu cid-qutCRysI8B" once="menu" id="menu2-8" data-rv-view="5074">
 
     
 
@@ -66,7 +66,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/h">how to make your own website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
