--- a/missions.html
+++ b/missions.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -23,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qtpdNybEfc" once="menu" id="menu2-5j" data-rv-view="468">
+<section class="menu cid-qtpdNybEfc" once="menu" id="menu2-5j" data-rv-view="467">
 
     
 
@@ -68,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="features18 popup-btn-cards cid-qsGYKoGhLj" id="features18-1w" data-rv-view="465">
+<section class="engine"><a href="https://mobirise.co/c">free website maker</a></section><section class="features18 popup-btn-cards cid-qsGYKoGhLj" id="features18-1w" data-rv-view="464">
 
     
 
@@ -156,10 +157,10 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
