--- a/missionsgivingcalendar.html
+++ b/missionsgivingcalendar.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -23,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qtpd2Tgm5a" once="menu" id="menu2-55" data-rv-view="546">
+<section class="menu cid-qtpd2Tgm5a" once="menu" id="menu2-55" data-rv-view="545">
 
     
 
@@ -68,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section content4 cid-qtk8FjCaiJ" id="content4-3l" data-rv-view="544">
+<section class="engine"><a href="https://mobirise.co/b">free website creator</a></section><section class="mbr-section content4 cid-qtk8FjCaiJ" id="content4-3l" data-rv-view="543">
 
     
 
@@ -123,10 +124,10 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
